[gd_scene load_steps=15 format=3 uid="uid://hebbgcokkspd"]

[ext_resource type="Script" path="res://Scenes/players/player.gd" id="1_5hr77"]
[ext_resource type="Texture2D" uid="uid://dfxs5mjl8hsqu" path="res://icon.svg" id="1_v3fbg"]
[ext_resource type="Resource" uid="uid://3a3goufrtr1x" path="res://Resources/testing_player_data.tres" id="2_iqu38"]
[ext_resource type="Texture2D" uid="uid://ci2bfhx80632r" path="res://Sprites/character_test-Sheet.png" id="3_gw7sm"]
[ext_resource type="Resource" uid="uid://6hsq1f25an7d" path="res://Resources/default_input_data.tres" id="3_nuguw"]
[ext_resource type="Script" path="res://Scenes/players/KickHitBox.gd" id="3_xyr3t"]
[ext_resource type="AudioStream" uid="uid://6vlyibalqp50" path="res://sfx/footstep_wood_004.ogg" id="5_y1l24"]
[ext_resource type="AudioStream" uid="uid://c1ow66wc4ru8k" path="res://sfx/impactSoft_heavy_000.ogg" id="8_65fqy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2at0l"]
atlas = ExtResource("3_gw7sm")
region = Rect2(0, 0, 19, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_rufgt"]
atlas = ExtResource("3_gw7sm")
region = Rect2(0, 0, 19, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n65e"]
atlas = ExtResource("3_gw7sm")
region = Rect2(19, 0, 19, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_x87b8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2at0l")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rufgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8n65e")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_urq7c"]
radius = 8.0
height = 20.8333

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ykewq"]
size = Vector2(30, 19.2)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("kick_hit_box", "player_sprite", "wall_jump_timer")]
process_physics_priority = 1
collision_mask = 20
platform_on_leave = 2
safe_margin = 1.0
script = ExtResource("1_5hr77")
movement_data = ExtResource("2_iqu38")
input_data = ExtResource("3_nuguw")
kick_hit_box = NodePath("KickHitBox")
player_sprite = NodePath("PlayerSprite")
wall_jump_timer = NodePath("WallJumpTimer")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x87b8")
animation = &"run"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -1)
scale = Vector2(1, 0.96)
shape = SubResource("CapsuleShape2D_urq7c")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="HeaderSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_y1l24")
volume_db = 10.0
pitch_scale = 1.5
bus = &"SFX"

[node name="KickHitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5
monitoring = false
script = ExtResource("3_xyr3t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="KickHitBox"]
position = Vector2(15, 0)
shape = SubResource("RectangleShape2D_ykewq")

[node name="Sprite2D" type="Sprite2D" parent="KickHitBox"]
visible = false
position = Vector2(24, 0.4)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_v3fbg")

[node name="KickTimer" type="Timer" parent="KickHitBox"]
wait_time = 0.4
one_shot = true

[node name="KickSound" type="AudioStreamPlayer2D" parent="KickHitBox"]
unique_name_in_owner = true
stream = ExtResource("8_65fqy")
volume_db = 10.0
pitch_scale = 2.0
bus = &"SFX"

[connection signal="body_entered" from="KickHitBox" to="." method="_on_kick_hit_box_body_entered"]
[connection signal="timeout" from="KickHitBox/KickTimer" to="." method="_on_timer_timeout"]
